es查询 后端开发完成

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -12,6 +12,9 @@
             <a href="/article"><b>文章</b></a>
         </div>
         <div>
+            <a href="/searchpage"><b>搜索</b></a>
+        </div>
+        <div>
             <a href="/link"><b>友链</b></a>
         </div>
     </div>
