--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 <div id="articles">
+    <div class="search-box">
+        <form action="/search" method="GET">
+            <input type="text" name="query" placeholder="搜索文章">
+            <button type="submit">搜索</button>
+        </form>
+    </div>
     <div id="articles_class">
         {{if .class }}
         <h2>分类 {{.class}} 下的文章 / {{len .articles}}篇</h2>
@@ -16,6 +22,7 @@
         <h2>所有文章 / {{len .articles}}篇</h2>
         {{end}}
     </div>
+
     {{range $key,$value := .articles}}
     <div class="article">
         <h2><a href="/article/{{$value.ID}}">{{$value.Title}}</a></h2>
